syntax = "proto3";

package note_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ybgr111/chat-server/grpc/pkg/note_v1;note_v1";

service NoteV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Message {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message Users {
    repeated string usernames = 1;
}

message CreateRequest {
    Users users = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    Message message = 1;
}